--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -7,8 +7,8 @@
 # (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow,
 # unless explicitly requested using the wintypes option.
 #
-# shadow = false
-shadow = true;
+shadow = false
+#shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
@@ -103,7 +103,7 @@ fade-out-step = 0.03;
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 1;
+inactive-opacity = 0.1;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
@@ -114,10 +114,10 @@ frame-opacity = 1;
 inactive-opacity-override = true;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-# active-opacity = 1.0
+# active-opacity = 0.1
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
- inactive-dim = 1.0
+ inactive-dim = 0.2
 
 # Specify a list of conditions of windows that should never be considered focused.
 # focus-exclude = []
@@ -131,25 +131,45 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # Note we don't make any guarantee about possible conflicts with other
 # programs that set '_NET_WM_WINDOW_OPACITY' on frame or client windows.
 # example:
-    opacity-rule = [ "70:class_g = 'kitty'" ];
+    opacity-rule = [ "75:class_g = 'kitty'" ];
 #
 # opacity-rule = []
 
 
 #################################
-#           Corners             #
+#             Corners           #
 #################################
+# requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
+#corner-radius = 3;
+#rounded-corners-exclude = [
+  #"window_type = 'normal'",
+#  "class_g = 'Polybar'",
+ # "class_g = 'URxvt'",
+ # "class_g = 'XTerm'",
+ # "class_g = 'kitty'",
+ # "class_g = 'Alacritty'",
+ # "class_g = 'Polybar'",
+ # "class_g = 'code-oss'",
+ # "class_g = 'TelegramDesktop'",
+ # "class_g = 'firefox'",
+ # "class_g = 'Thunderbird'"
+#];
+#round-borders = 1;
+#round-borders-exclude = [
+  #"class_g = 'TelegramDesktop'",
+#];
 
-# Sets the radius of rounded window corners. When > 0, the compositor will
-# round the corners of windows. Does not interact well with
-# `transparent-clipping`.
-corner-radius = 0
 
-# Exclude conditions for rounded corners.
-rounded-corners-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'"
-];
+animations = true
+# `auto`, `none`, `fly-in`, `zoom`, `slide-down`, `slide-up`, `slide-left`, `slide-right` `slide-in`, `slide-out`
+animation-for-transient-window = "zoom"
+animation-for-open-window = "zoom"
+animation-for-unmap-window = "zoom"
+# animation-stiffness = 150
+animation-dampening = 20
+#animation-window-mass = 0.5
+#animation-delta = 8
+animation-clamping = false
 
 
 #################################
@@ -158,48 +178,49 @@ rounded-corners-exclude = [
 
 
 # Parameters for background blurring, see the *BLUR* section for more information.
-# blur-method = "glx"
+# blur-method = 
 # blur-size = 12
 #
 # blur-deviation = false
-#
-# blur-strength = 5
 
-# Blur background of semi-transparent / ARGB windows.
-# Bad in performance, with driver-dependent behavior.
+# Blur background of semi-transparent / ARGB windows. 
+# Bad in performance, with driver-dependent behavior. 
 # The name of the switch may change without prior notifications.
 #
-blur-background = true
+# blur-background = true;
 
-# Blur background of windows when the window frame is not opaque.
+# Blur background of windows when the window frame is not opaque. 
 # Implies:
-#    blur-background
+#    blur-background 
 # Bad in performance, with driver-dependent behavior. The name may change.
 #
-blur-background-frame = true
+# blur-background-frame = false;
 
 
 # Use fixed blur strength rather than adjusting according to window opacity.
-# blur-background-fixed = false
+# blur-background-fixed = false;
 
 
 # Specify the blur convolution kernel, with the following format:
 # example:
 #   blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 #
-# blur-kern = ""
-#blur-kern = "3x3box";
-blur-kern = "3x3box";
-blur-method = "dual_kawase";
-blur-strength = 2;
+# blur-kern = ''
+# blur-kern = "3x3box";
 
-# Exclude conditions for background blur.
-# blur-background-exclude = []
-blur-background-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'",
-  "_GTK_FRAME_EXTENTS@:c"
-];
+blur: {
+  # requires: https://github.com/ibhagwan/picom
+  method = "dual_kawase";
+  #method = "kernel";
+  strength = 5;
+  # deviation = 1.0;
+  # kernel = "11x11gaussian";
+  background = false;
+  background-frame = false;
+  background-fixed = false;
+  kern = "3x3box";
+}
+
 
 #################################
 #       General Settings        #
@@ -410,7 +431,7 @@ log-level = "warn";
 #
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 1; focus = true; full-shadow = false; };
+  tooltip = { fade = true; shadow = false; opacity = 1; focus = true; full-shadow = false; };
   dock = { shadow = false; clip-shadow-above = true; }
   dnd = { shadow = false; }
   popup_menu = { opacity = 1; }
