--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -153,6 +153,9 @@ set wrap_plaintext_previews false
 # Save the console history on exit?
 set save_console_history true
 
+#default_linemode devicons
+
+
 # Draw the status bar on top of the browser window (default: bottom)
 set status_bar_on_top false
 
