--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,16 @@
 .config/flameshot
 .config/nautilus
 .config/dconf
+.config/glib-2.0
 .config/gtk-2.0
 .config/gtk-3.0
+.config/gtk-4.0
 .config/pulse
 .config/pulse
+.config/autostart
+.config/obs-studio
+.config/xfce4
+.config/Thunar
 
 pavucontrol.ini
 mimeapps.list
