--- a/.config/nitrogen/nitrogen.cfg
+++ b/.config/nitrogen/nitrogen.cfg
@@ -1,12 +1,12 @@
 [geometry]
-posx=3413
-posy=20
-sizex=1703
-sizey=1416
+posx=2304
+posy=16
+sizex=762
+sizey=1058
 
 [nitrogen]
 view=icon
 recurse=true
 sort=alpha
 icon_caps=false
-dirs=/home/gfuentes/Pictures;
+dirs=/home/gfuentes/Pictures;/home/gfuentes/.config;
